# ProtoFlow

./: .gitignore  GUIDE.md  ProtoFlow.sln  README.md  pyproject.toml
Plugins/: CalendarSystem.cs  CaptureProtocol.cs  CaptureSystem.cs  FocusProtocol.cs  MorningProtocol.cs  NightProtocol.cs  Plugins.csproj  ProjectManagementSystem.cs  ProjectSystem.cs  RoutineSystem.cs  TaskSystem.cs
SDK/: Attributes.cs  Client.cs  ConsoleUtilities.cs  Core.cs  Instance.cs  SDK.csproj  Serializer.cs  Server.cs
SDK/InstanceTools/: InstanceAudio.cs  InstanceEvents.cs  InstanceUI.cs
Server/: Program.cs  Server.csproj
client/: .statifyconfig  PROTOCOL.md  main.js  package-lock.json  package.json  preload.js
client/icons/: icon.icns
client/public/resources/: renderer.js
client/src/: index.html  sidebar.html
documentation/: GUIDE.md
images/: Guide.psd  Logo.psd
src/protoflow/: cli.py  config.json  helpers.py
src/protoflow/config/: main.py
src/protoflow/create/: main.py  template.py
src/protoflow/edit/: main.py
src/protoflow/open/: main.py
src/protoflow/open_directory/: main.py
src/protoflow/open_file/: main.py
src/protoflow/remove/: main.py
src/protoflow/watch/: main.py
windows-client/: compile_file.py  main.js  package-lock.json  package.json  preload.js
windows-client/public/: index.html
windows-client/public/resources/: renderer.js  styles.css
windows-client/src/: content.html  template.html
